--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.4",
+    "firebase": "^9.6.10",
     "npx": "^10.2.2",
     "postcss": "^8.4.12",
     "react": "^17.0.2",
@@ -38,6 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
