--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,12 @@ cache:
  directories:
    - node_modules
 script:
- - npm run test
- - npm run build || true
+ - npm test
+ - npm run build
+deploy:
+ provider: pages
+ skip_cleanup: true
+ github_token: $GITHUB_TOKEN
+ local_dir: build
+ on:
+   branch: staging
