update travis ci file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,7 @@
 language: node_js
 node_js:
  - "stable"
-cache:
- directories:
-   - node_modules
+install: npm install --force
 script:
- - npm test
+ - npm run test
  - npm run build
-deploy:
- provider: pages
- skip_cleanup: true
- github_token: $GITHUB_TOKEN
- local_dir: build
- on:
-   branch: staging
