--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: node_js
 node_js: lts/*
+cache:
+ directories:
+   - node_modules
 script: 
-  - npm run build
+  - CI=false npm run build
