added branch for deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ script:
   - npm test
   - CI=false npm run build
 deploy:
-  skip_cleanup: true
+  cleanup: true
   provider: firebase
   token:
     secure: ${FIREBASE_TOKEN}
+  on:
+    branch: jaimin
